[package]
name = "juniper_hyper_broken"
version = "0.0.0"
authors = ["Samuel Ainsworth <skainsworth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# See https://github.com/graphql-rust/juniper/issues/45.
juniper = { version = "0.14.2", features = ["expose-test-schema"] }

hyper = "0.13.7"

# Failed attempt to get rid of "can't find crate" error.
serde_json = "1.0.57"
