[package]
name = "juniper_hyper_broken"
version = "0.0.0"
authors = ["Samuel Ainsworth <skainsworth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# See https://github.com/graphql-rust/juniper/issues/45.
tokio = { version = "*", features = ["default", "macros"] }
pretty_env_logger = "*"
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["expose-test-schema"] }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper.git" }

hyper = "0.13.7"